@@ -1926,14 +1926,10 @@ static void reset_colours(void) {
 /*
 ** 'vdu_graphcol' sets the graphics foreground or background colour and
 ** changes the type of plotting action to be used for graphics (VDU 18).
-** The only plot action this code supports is 'overwrite point', so it
-** is not possible to exclusive OR lines on to the screen and so forth.
-** This is a restriction imposed by the graphics library used
 */
 static void vdu_graphcol(void) {
   int32 colnumber;
   if (graphmode == NOGRAPHICS) error(ERR_NOGRAPHICS);
-  if (vduqueue[0] != OVERWRITE_POINT) return; //error(ERR_UNSUPPORTED);	/* Only graphics plot action 0 is supported */
   colnumber = vduqueue[1];
   if (colnumber < 128) {	/* Setting foreground graphics colour */
       graph_fore_action = vduqueue[0];
@@ -2686,6 +2682,35 @@ static void flood_fill(int32 x, int y, int colour) {
     reveal_cursor();
 }
 
+/* The plot_pixel function plots pixels for the drawing functions, and
+   takes into account the GCOL foreground action code */
+void plot_pixel(SDL_Surface *surface, int64 offset, Uint32 colour) {
+  Uint32 altcolour = 0, prevcolour = 0;
+
+    if (graph_fore_action==0) {
+      altcolour = colour;
+    } else {
+      prevcolour=*((Uint32*)surface->pixels + offset);
+      prevcolour=emulate_colourfn((prevcolour >> 16) & 0xFF, (prevcolour >> 8) & 0xFF, (prevcolour & 0xFF));
+      if (colourdepth == 256) prevcolour = prevcolour >> COL256SHIFT;
+      switch (graph_fore_action) {
+	case 1:
+	  altcolour=(prevcolour | graph_physforecol);
+	  break;
+	case 2:
+	  altcolour=(prevcolour & graph_physforecol);
+	  break;
+	case 3:
+	  altcolour=(prevcolour ^ graph_physforecol);
+	  break;
+      }
+      altcolour=altcolour*3;
+      altcolour=SDL_MapRGB(sdl_fontbuf->format, palette[altcolour], palette[altcolour+1], palette[altcolour+2]);
+    }
+    *((Uint32*)surface->pixels + offset) = altcolour;
+
+}
+
 /*
 ** 'emulate_plot' emulates the Basic statement 'PLOT'. It also represents
 ** the heart of the graphics emulation functions as most of the other
@@ -2756,7 +2781,7 @@ void emulate_plot(int32 code, int32 x, int32 y) {
   case PLOT_POINT:	/* Plot a single point */
     hide_cursor();
     if ((ex < 0) || (ex >= screenwidth) || (ey < 0) || (ey >= screenheight)) break;
-    *((Uint32*)modescreen->pixels + ex + ey*vscrwidth) = colour;
+    plot_pixel(modescreen, ex + ey*vscrwidth, colour);
     blit_scaled(ex, ey, ex, ey);
     reveal_cursor();
     break;
@@ -3778,7 +3803,7 @@ void draw_h_line(SDL_Surface *sr, int32 x1, int32 y, int32 x2, Uint32 col) {
     if (x2 < 0) x2 = 0;
     if (x2 >= vscrwidth) x2 = vscrwidth-1;
     for (i = x1; i <= x2; i++)
-      *((Uint32*)sr->pixels + i + y*vscrwidth) = col;
+      plot_pixel(sr, i + y*vscrwidth, col);
   }
 }
 
@@ -3850,7 +3875,7 @@ void draw_line(SDL_Surface *sr, int32 x1, int32 y1, int32 x2, int32 y2, Uint32 c
         skip=0;
       } else {
 	if ((x >= 0) && (x < screenwidth) && (y >= 0) && (y < screenheight))
-	  *((Uint32*)sr->pixels + x + y*vscrwidth) = col;
+	  plot_pixel(sr, x + y*vscrwidth, col);
 	if (style & 0x10) skip=1;
       }
       if (d >= 0) {
@@ -3867,7 +3892,7 @@ void draw_line(SDL_Surface *sr, int32 x1, int32 y1, int32 x2, int32 y2, Uint32 c
         skip=0;
       } else {
 	if ((x >= 0) && (x < screenwidth) && (y >= 0) && (y < screenheight))
-	  *((Uint32*)sr->pixels + x + y*vscrwidth) = col;
+	  plot_pixel(sr, x + y*vscrwidth, col);
 	if (style & 0x10) skip=1;
       }
       if (d >= 0) {
@@ -3880,7 +3905,7 @@ void draw_line(SDL_Surface *sr, int32 x1, int32 y1, int32 x2, int32 y2, Uint32 c
   }
   if ( ! (style & 0x08)) {
     if ((x >= 0) && (x < screenwidth) && (y >= 0) && (y < screenheight))
-      *((Uint32*)sr->pixels + x + y*vscrwidth) = col;
+      plot_pixel(sr, x + y*vscrwidth, col);
   }
 }
 
@@ -3920,14 +3945,12 @@ void draw_ellipse(SDL_Surface *sr, int32 x0, int32 y0, int32 a, int32 b, Uint32 
 
   while (g < 0) {
     if (((y0 - y) >= 0) && ((y0 - y) < vscrheight)) {
-      dest = ((Uint32*)sr->pixels + x0 + (y0 - y)*vscrwidth);
-      if (((x0 - x) >= 0) && ((x0 - x) < vscrwidth)) *(dest - x) = c;
-      if (((x0 + x) >= 0) && ((x0 + x) < vscrwidth)) *(dest + x) = c;
+      if (((x0 - x) >= 0) && ((x0 - x) < vscrwidth)) plot_pixel(sr, x0 + (y0 - y)*vscrwidth - x, c);
+      if (((x0 + x) >= 0) && ((x0 + x) < vscrwidth)) plot_pixel(sr, x0 + (y0 - y)*vscrwidth + x, c);
     }
     if (((y0 + y) >= 0) && ((y0 + y) < vscrheight)) {
-      dest = ((Uint32*)sr->pixels + x0 + (y0 + y)*vscrwidth);
-      if (((x0 - x) >= 0) && ((x0 - x) < vscrwidth)) *(dest - x) = c;
-      if (((x0 + x) >= 0) && ((x0 + x) < vscrwidth)) *(dest + x) = c;
+      if (((x0 - x) >= 0) && ((x0 - x) < vscrwidth)) plot_pixel(sr, x0 + (y0 + y)*vscrwidth - x, c);
+      if (((x0 + x) >= 0) && ((x0 + x) < vscrwidth)) plot_pixel(sr, x0 + (y0 + y)*vscrwidth + x, c);
     }
 
     if (h < 0) {
@@ -3951,14 +3974,12 @@ void draw_ellipse(SDL_Surface *sr, int32 x0, int32 y0, int32 a, int32 b, Uint32 
 
   while (y <= y1) {
     if (((y0 - y) >= 0) && ((y0 - y) < vscrheight)) {
-      dest = ((Uint32*)sr->pixels + x0 + (y0 - y)*vscrwidth);
-      if (((x0 - x) >= 0) && ((x0 - x) < vscrwidth)) *(dest - x) = c;
-      if (((x0 + x) >= 0) && ((x0 + x) < vscrwidth)) *(dest + x) = c;
+      if (((x0 - x) >= 0) && ((x0 - x) < vscrwidth)) plot_pixel(sr, x0 + (y0 - y)*vscrwidth - x, c);
+      if (((x0 + x) >= 0) && ((x0 + x) < vscrwidth)) plot_pixel(sr, x0 + (y0 - y)*vscrwidth + x, c);
     } 
     if (((y0 + y) >= 0) && ((y0 + y) < vscrheight)) {
-      dest = ((Uint32*)sr->pixels + x0 + (y0 + y)*vscrwidth);
-      if (((x0 - x) >= 0) && ((x0 - x) < vscrwidth)) *(dest - x) = c;
-      if (((x0 + x) >= 0) && ((x0 + x) < vscrwidth)) *(dest + x) = c;
+      if (((x0 - x) >= 0) && ((x0 - x) < vscrwidth)) plot_pixel(sr, x0 + (y0 + y)*vscrwidth - x, c);
+      if (((x0 + x) >= 0) && ((x0 + x) < vscrwidth)) plot_pixel(sr, x0 + (y0 + y)*vscrwidth + x, c);
     }
 
     if (h < 0)
