@@ -5,6 +5,8 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - ChangeLog layout change: Most recent release first.
 - Similar to the GET fix in V1.21.11, the same problem was occurring with
   INKEY(delay). This is now fixed.
+- GCOL action codes (at least for foreground colours) are now supported.
+  (The Turtle Graphics demo from the BBC Master welcome disc works properly!)
 - Telstar client updated, enhancements from gARetH baBB - thank you!
 * V1.21.13
 - Rework temp file bits to use mkstemp instead of tmpnam.
